@@ -1,0 +1,12 @@
+/* eslint-env node */
+/* eslint-disable no-console */
+
+export const default_params = {
+  sources                : [],
+  snippet_file           : null,
+  result_test_file       : null,
+  snippet_key            : null,
+  custom_var_prefix      : null,
+  icon_sources           : null,
+  icon_list_snippet_key  : null
+};
