@@ -1,0 +1,7 @@
+# test
+
+# css cutsom properties list
+
+```
+node ./scripts/vscode-css-properties-list/index.mjs --config=./test/test.config.mjs
+```
