@@ -1,0 +1,7 @@
+.custom-properties {
+
+  --prefix-border-radius: 4px;
+  --prefix-primary: #c00;
+  --prefix-secondary: rgb(218, 228, 12);
+
+}
