@@ -25,5 +25,6 @@
 2023-03-16T18:35:29.251Z |           1.10.1 | fix
 2023-03-16T20:58:13.190Z |           1.10.2 | Fix
 2023-03-16T21:10:58.632Z |           1.10.3 | Update `upd@m`
-2023-03-18T17:31:53.152Z |           1.10.4 | upd@m: aggiunta flag `--save` a `npm update`
-2023-03-18T22:06:44.332Z |           1.11.0 | Update-version: aggiunta opzione per avvio nuovi progetti
+2023-03-17T17:31:53.152Z |           1.10.4 | upd@m: aggiunta flag `--save` a `npm update`
+2023-03-17T18:06:44.332Z |           1.11.0 | Update-version: aggiunta opzione per avvio nuovi progetti
+2023-03-20T09:27:40.000Z |           1.12.0 | vscode custom properties list
